--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-list-item"><a class="navigation-list-link" href="#">Agencja</a></li>
-                <li class="navigation-list-item"><a class="navigation-list-link" href="/portfolio.html">Portfolio</a></li>
+                <li class="navigation-list-item"><a class="navigation-list-link" href="portfolio.html">Portfolio</a></li>
                 <li class="navigation-list-item"><a class="navigation-list-link" href="#">Kontakt</a></li>
             </ul>
         </nav>
