--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="navigation-list-item"><a class="navigation-list-link" href="#">Kontakt</a></li>
             </ul>
         </nav>
-            <ul>
+            <ul class="navigation-list-phone-mail">
                 <li><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-phone-number" href="tel:+48111111111">+48 111 111 111</a></li>
             </ul>
@@ -73,7 +73,7 @@
             </div>
         </section>
         <!-- Sekcja - Nasz zespół -->
-        <section>
+        <section class="team-section">
             <h2 class="h2-text">Nasz zespół</h2>
             <div class="team-box">
                 <img src="images/Main/team_card_1.jpg"
@@ -112,7 +112,7 @@
     <footer class="footer">
         <a class="navigation-logo-footer" href="#"><span class="navigation-logo-span">Web</span>Studio</a>
         <address class="address">
-            <ul>
+            <ul class="navigation-list-footer">
                 <li><a class="adress-maps" href="https://goo.gl/maps/QuRZALvSsucPEKKi7" target="_blank">m. Warszawa, Aleje Jerozolimskie 21</a></li>
                 <li><a class="adress-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="adress-phone-number" href="tel:+48111111111">+48 111 111 111</a></li>
