Changes in index and css

--- a/index.html
+++ b/index.html
@@ -25,88 +25,91 @@
                 <li><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-phone-number" href="tel:+48111111111">+48 111 111 111</a></li>
             </ul>
+ 
+    </header>
+    <main>
+        <!-- Sekcja Baner -->
         <section class="baner-header">
             <h1 class="text-baner">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
             <button class="modal-btn-index" type="button">Zamów usługe</button>
-        </section>     
-    </header>
-    <main>
+        </section>
         <!-- Sekcja LOREM IPSUM - Nasze atuty -->
         <section>
-            <div class="advantages-block">
-                <p class="advantages-header">LOREM IPSUM</p>
-                <p class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
-            <div class="advantages-block">
-                <p class="advantages-header">LOREM IPSUM</p>
-                <p class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
-            <div class="advantages-block">
-                <p class="advantages-header">LOREM IPSUM</p>
-                <p class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
-            <div class="advantages-block">
-                <p class="advantages-header">LOREM IPSUM</p>
-                <p class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </div>
+            <ul class="advantages-block">
+                <li class="advantages-header">LOREM IPSUM</li>
+                <li class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
+            <ul class="advantages-block">
+                <li class="advantages-header">LOREM IPSUM</li>
+                <li class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
+            <ul class="advantages-block">
+                <li class="advantages-header">LOREM IPSUM</li>
+                <li class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
+            <ul class="advantages-block">
+                <li class="advantages-header">LOREM IPSUM</li>
+                <li class="advantages-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</li>
+            </ul>
         </section>
         <!-- Sekcja - Czym się zajmujemy -->
         <section>
             <h2 class="h2-text">Czym się zajmujemy</h2>
-            <div class="service-box">
+            <ul class="service-box">
+                <li class="service-box-list">
                 <img src="images/Main/box1.jpg"
                 alt="box 1 - coding"
                 width="370"
                 height="294">
-            </div>
-            <div class="service-box">
+                </li>
+                <li class="service-box-list">
                 <img src="images/Main/box2.jpg"
                 alt="box 2 - conceptions"
                 width="370"
                 height="294">
-            </div>
-            <div class="service-box">
+                </li>
+                <li class="service-box-list">
                 <img src="images/Main/box3.jpg"
                 alt="box 3 - design"
                 width="370"
                 height="294">
-            </div>
+                </li>
         </section>
         <!-- Sekcja - Nasz zespół -->
         <section class="team-section">
             <h2 class="h2-text">Nasz zespół</h2>
-            <div class="team-box">
-                <img src="images/Main/team_card_1.jpg"
+            <ul class="team-box">
+                <li class="team-image"><img src="images/Main/team_card_1.jpg"
                 alt="Product Designer"
                 width="270"
-                height="260">
-                <p class="team-name">John Doe</p>
-                <p class="team-occupation">Product Designer</p>
-            </div>
-            <div class="team-box">
-                <img src="images/Main/team_card_2.jpg"
+                height="260"></li>
+                <li class="team-name">John Doe</li>
+                <li class="team-occupation">Product Designer</li>
+                </ul>
+            <ul class="team-box">
+                <li class="team-image"><img src="images/Main/team_card_2.jpg"
                 alt="Frontend Developer"
                 width="270"
-                height="260">
-                <p class="team-name">John Doe</p>
-                <p class="team-occupation">Frontend Developer</p>
-            </div>
-            <div class="team-box">
-                <img src="images/Main/team_card_3.jpg"
+                height="260"></li>
+                <li class="team-name">John Doe</li>
+                <li class="team-occupation">Frontend Developer</li>
+            </ul>
+            <ul class="team-box">
+                <li class="team-image"><img src="images/Main/team_card_3.jpg"
                 alt="Marketing"
                 width="270"
-                height="260">
-                <p class="team-name">John Doe</p>
-                <p class="team-occupation">Marketing</p>
-            </div>
-            <div class="team-box">
-                <img src="images/Main/team_card_4.jpg"
+                height="260"></li>
+                <li class="team-name">John Doe</li>
+                <li class="team-occupation">Marketing</li>
+            </ul>
+            <ul class="team-box">
+                <li class="team-image"><img src="images/Main/team_card_4.jpg"
                 alt="UI Designer"
                 width="270"
-                height="260">
-                <p class="team-name">John Doe</p>
-                <p class="team-occupation">UI Designer</p>
-            </div>
+                height="260"></li>
+                <li class="team-name">John Doe</li>
+                <li class="team-occupation">UI Designer</li>
+                </ul>
         </section>
     </main>
     <footer class="footer">
