Changes in index.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <header class="header">
-        <a class="navigation-logo-header" href="#"><span class="navigation-logo-span">Web</span>Studio</a>
+        <a class="navigation-logo-header" href="index.html"><span class="navigation-logo-span">Web</span>Studio</a>
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-list-item"><a class="navigation-list-link" href="#">Agencja</a></li>
+                <li class="navigation-list-item"><a class="navigation-list-link" href="index.html">Agencja</a></li>
                 <li class="navigation-list-item"><a class="navigation-list-link" href="portfolio.html">Portfolio</a></li>
                 <li class="navigation-list-item"><a class="navigation-list-link" href="#">Kontakt</a></li>
             </ul>
@@ -113,7 +113,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="navigation-logo-footer" href="#"><span class="navigation-logo-span">Web</span>Studio</a>
+        <a class="navigation-logo-footer" href="index.html"><span class="navigation-logo-span">Web</span>Studio</a>
         <address class="address">
             <ul class="navigation-list-footer">
                 <li><a class="adress-maps" href="https://goo.gl/maps/QuRZALvSsucPEKKi7" target="_blank">m. Warszawa, Aleje Jerozolimskie 21</a></li>
