--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="navigation-logo-header" href="#"><span class="navigation-logo-span">Web</span>Studio</a>
+        <a class="navigation-logo-header" href="index.html"><span class="navigation-logo-span">Web</span>Studio</a>
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-list-item"><a class="navigation-list-link" href="index.html">Agencja</a></li>
@@ -33,61 +33,63 @@
             <li class="list-button-porfolio"><button class="button-porfolio" type="button">Wszystkie</button></li>
             <li class="list-button-porfolio"><button class="button-porfolio" type="button">Strony</button></li>
             <li class="list-button-porfolio"><button class="button-porfolio" type="button">Aplikacje</button></li>
-            <li class="list-button-porfolio"><button class="button-porfolio" type="button">Projekty Graficzne</button></li>
+            <li class="list-button-porfolio"><button class="button-porfolio" type="button">Dizajn</button></li>
             <li class="list-button-porfolio"><button class="button-porfolio" type="button">Marketing</button></li>
         </ul>
         </section>
         <!-- Sekcja - Kategorii portfolio -->
         <section>
-            <div class="servises-block">
-                <img src="images/Portfolio/Technocrack.jpg" alt="Strona internetowa Technocrack" width="370" height="294">
-                <p class="services-header">Technocrack</p>
-                <p class="services-description">Strona internetowa</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Grafika_New_Orlean.jpg" alt="Projekt graficzny NBA" width="370" height="294">
-                <p class="services-header">Grafika New Orlean vs Golden Star</p>
-                <p class="services-description">Projekty Graficzne</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Restauracja_Seafood.jpg" alt="Logo restauracji Seafood" width="370" height="294">
-                <p class="services-header">Restauracja Seafood</p>
-                <p class="services-description">Aplikacja</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/projekt_prime.jpg" alt="Słuchawki Projekt Prime" width="370" height="294">
-                <p class="services-header">Projekt Prime</p>
-                <p class="services-description">Marketing</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Projekt_Boxes.jpg" alt="Logo aplikacji Projekt Boxes" width="370" height="294">
-                <p class="services-header">Projekt Boxes</p>
-                <p class="services-description">Aplikacja</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Inspiration_has_no_Borders.jpg" alt="Główna strona internetowa - Inspiration has no Borders" width="370" height="294">
-                <p class="services-header">Inspiration has no Borders</p>
-                <p class="services-description">Strona internetowa</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Magazyn_Limited_Edition.jpg" alt="Artykuł z web-strony Magazyn Limited Edition" width="370" height="294">
-                <p class="services-header">Magazyn Limited Edition</p>
-                <p class="services-description">Projekty Graficzne</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Projekt_LAB.jpg" alt="Etykieta Projektu LAB" width="370" height="294">
-                <p class="services-header">Projekt LAB</p>
-                <p class="services-description">Marketing</p>
-            </div>
-            <div>
-                <img src="images/Portfolio/Growing_Business.jpg" alt="Główna strona internetowa - Growing Business" width="370" height="294">
-                <p class="services-header">Growing Business</p>
-                <p class="services-description">Aplikacja</p>
-            </div>
+            <ul>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Technocrack.jpg" alt="Strona internetowa Technocrack" width="370" height="294">
+                    <p class="services-header">Technocrack</p>
+                    <p class="services-description">Strona internetowa</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Grafika_New_Orlean.jpg" alt="Projekt graficzny NBA" width="370" height="294">
+                    <p class="services-header">Grafika New Orlean vs Golden Star</p>
+                    <p class="services-description">Projekty Graficzne</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Restauracja_Seafood.jpg" alt="Logo restauracji Seafood" width="370" height="294">
+                    <p class="services-header">Restauracja Seafood</p>
+                    <p class="services-description">Aplikacja</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/projekt_prime.jpg" alt="Słuchawki Projekt Prime" width="370" height="294">
+                    <p class="services-header">Projekt Prime</p>
+                    <p class="services-description">Marketing</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Projekt_Boxes.jpg" alt="Logo aplikacji Projekt Boxes" width="370" height="294">
+                    <p class="services-header">Projekt Boxes</p>
+                    <p class="services-description">Aplikacja</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Inspiration_has_no_Borders.jpg" alt="Główna strona internetowa - Inspiration has no Borders" width="370" height="294">
+                    <p class="services-header">Inspiration has no Borders</p>
+                    <p class="services-description">Strona internetowa</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Magazyn_Limited_Edition.jpg" alt="Artykuł z web-strony Magazyn Limited Edition" width="370" height="294">
+                    <p class="services-header">Magazyn Limited Edition</p>
+                    <p class="services-description">Projekty Graficzne</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Projekt_LAB.jpg" alt="Etykieta Projektu LAB" width="370" height="294">
+                    <p class="services-header">Projekt LAB</p>
+                    <p class="services-description">Marketing</p>
+                </li>
+                <li class="servises-block">
+                    <img src="images/Portfolio/Growing_Business.jpg" alt="Główna strona internetowa - Growing Business" width="370" height="294">
+                    <p class="services-header">Growing Business</p>
+                    <p class="services-description">Aplikacja</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer class="footer">
-        <a class="navigation-logo-footer" href="#"><span class="navigation-logo-span">Web</span>Studio</a>
+        <a class="navigation-logo-footer" href="index.html"><span class="navigation-logo-span">Web</span>Studio</a>
         <address class="address">
             <ul class="navigation-list-footer">
                 <li><a class="adress-maps" href="https://goo.gl/maps/QuRZALvSsucPEKKi7" target="_blank">m. Warszawa, Aleje
